Update swagger API doc
... to add the newly added parameters.
